--- a/src/app/ui/about/project.component.scss
+++ b/src/app/ui/about/project.component.scss
@@ -14,7 +14,7 @@
                 img{
                     margin: auto;
                     max-width: 48px;
-                    max-height: 48px;  
+                    height: auto;  
                 }
             }
              h4{
@@ -23,7 +23,7 @@
                 line-height: 1.1;
             }
             h6{
-                font-size: 10px;
+                font-size: 12px;
                 margin: 0;
                 line-height: 1.1;
             }
@@ -48,7 +48,7 @@
 
         .project-heading{
             h4{
-                font-size: 12px;
+                font-size: 14px;
             }
         }
         
@@ -57,7 +57,6 @@
             padding-left: 0px;
             p{
                 line-height: 1.1;
-                font-size:10px;
             }
         }
     }
