--- a/src/app/ui/portfolio/portfolio-item.component.scss
+++ b/src/app/ui/portfolio/portfolio-item.component.scss
@@ -36,7 +36,6 @@
                 position: relative;
             flex-grow: 1;
             box-sizing: border-box;
-            min-width: 300px;
             .avatar{
                 
                 position: relative;
@@ -101,6 +100,8 @@
                 width: 300px;     
             }
              .product-canvas{
+                 
+            min-width: 300px;
                 .avatar{
                     min-height: 300px;
                     width: 100%;
@@ -121,6 +122,7 @@
         margin: 4px;
         cursor: pointer;
         padding: 8px 16px;
+        background: rgba(0, 0, 0, 0.03);
         .play-icon{
             font-size: 24px;
             padding: 4px;
