--- a/src/app/ui/test/test.component.html
+++ b/src/app/ui/test/test.component.html
@@ -4,50 +4,88 @@
             <div class="contact">
                 <div class="contact-form np-color-white">
 
-                    <div class="np-flex-wrapper np-flex-row">
+                    <!--div class="contact-field np-flex-wrapper np-flex-row">
                         <mdl-textfield type="text" label="Name..." pattern="-?[0-9]*(\.[0-9]+)?" error-msg="Input is not a name!" [(ngModel)]="text4"
                             floating-label></mdl-textfield>
 
+                        <mdl-textfield type="text" label="Email..." pattern="-?[0-9]*(\.[0-9]+)?" error-msg="Input is not an Email!" [(ngModel)]="text4"
+                            floating-label></mdl-textfield>
+
+                        <mdl-textfield label="Message..." [(ngModel)]="text4" rows="3" maxrows="3" floating-label></mdl-textfield>
+
+                    </div-->
+
+                     <div class="mdl-grid">
+                        <div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                            <mdl-textfield type="text" label="Name..." pattern="-?[0-9]*(\.[0-9]+)?" error-msg="Input is not a name!" [(ngModel)]="text4"
+                                floating-label></mdl-textfield>
+                        </div>
                         <!--div class="mdl-cell mdl-cell--6-col">
                             <mdl-textfield type="text" label="Mobile (optional)..." pattern="-?[0-9]*(\.[0-9]+)?" error-msg="Input is not a number!"
                                 [(ngModel)]="text4" floating-label></mdl-textfield>
                         </div-->
-                        <mdl-textfield type="text" label="Email..." pattern="-?[0-9]*(\.[0-9]+)?" error-msg="Input is not an Email!" [(ngModel)]="text4"
-                            floating-label></mdl-textfield>
+                        <div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                            <mdl-textfield type="text" label="Email..." pattern="-?[0-9]*(\.[0-9]+)?" error-msg="Input is not an Email!" [(ngModel)]="text4"
+                                floating-label></mdl-textfield>
+                        </div>
 
                         <!--div class="mdl-cell mdl-cell--6-col">
                             <mdl-textfield type="text" label="Company Name..." pattern="-?[0-9]*(\.[0-9]+)?" error-msg="Input is not an Email!" [(ngModel)]="text4"
                                 floating-label></mdl-textfield>
                         </div-->
-                        <mdl-textfield label="Message..." [(ngModel)]="text4" rows="3" maxrows="3" floating-label></mdl-textfield>
-
+                        <div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
+                            <mdl-textfield label="Message..." [(ngModel)]="text4" rows="3" maxrows="3" floating-label></mdl-textfield>
+                        </div>
                     </div>
                     <mdl-layout-spacer></mdl-layout-spacer>
                     <div class="contact-form-submit  np-flex-row np-flex-wrapper np-padding-left-16">
                         <h4 class="np-font-comfortaa np-font-14 np-font-light np-align-vertical-middle">(We will connect back in 1 working day.)</h4>
-                        <button mdl-button mdl-button-type="mini-fab" type="submit" class="btn btn-success" mdl-colored="primary"><mdl-icon class="np-font-14">send</mdl-icon></button>
+                         <mdl-layout-spacer></mdl-layout-spacer>
+                         <button mdl-button mdl-button-type="mini-fab" type="submit" class="btn btn-success" mdl-colored="primary"><mdl-icon class="np-font-14">send</mdl-icon></button>
+
+                    </div>
+                </div>
+
+                <div class="contact-me np-color-primary-dark np-flex-column np-flex-wrapper np-text-color-white">
+                    <div class="heading np-margin-bottom-12 np-padding-left-16">
+                        <h4 class="np-font-comfortaa np-font-14 np-font-light">Contact Me</h4>
+                    </div>
+                    <div class="info">
+                        <ul class="np-list-vertical  np-padding-left-16">
+                            <li>
+                                <mdl-icon class="np-text-color-primary-light np-align-vertical-middle ">location_on</mdl-icon>
+                                <button class="np-font-open-sans np-font-12 np-font-light np-text-color-white" mdl-button mdl-ripple>Koramagala, Bangalore</button>
+                            </li>
+                            <li>
+                                <mdl-icon class="np-align-vertical-middle np-text-color-primary-light">phonelink_ring</mdl-icon>
+                                <button class="np-font-open-sans np-font-12 np-font-light np-text-color-white" mdl-button mdl-ripple>+91-821 786 2643</button>
+                            </li>
+                            <li>
+                                <mdl-icon class="np-align-vertical-middle np-text-color-primary-light">mail_outline</mdl-icon>
+                                <button class="np-font-open-sans np-font-12 np-font-light np-text-color-white" mdl-button mdl-ripple>nirajprakash13@gmail.com</button>
+                            </li>
+                        </ul>
+                    </div>
+                    <mdl-layout-spacer></mdl-layout-spacer>
+                    <div class="contact-social">
+                        <h4 class="np-font-comfortaa np-font-14 np-font-light np-padding-left-16">Find me on</h4>
+                        <ul class="social">
+                            <li>
+                                <button mdl-button mdl-button-type="icon" class="np-selector-text-primary-light-to-white"><i class="icon-github-circled socialicon"></i></button>
+                            </li>
+                            <li>
+                                <button mdl-button mdl-button-type="icon" class="np-selector-text-primary-light-to-white"><i class="icon-bitbucket socialicon"></i></button>
+                            </li>
+                            <li>
+                                <button mdl-button mdl-button-type="icon" class="np-selector-text-primary-light-to-white"><i class="icon-linkedin socialicon"></i></button>
+                            </li>
+                            <li>
+                                <button mdl-button mdl-button-type="icon" class="np-selector-text-primary-light-to-white"><i class="icon-instagram socialicon"></i></button>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </div>
-
-
-        <div class="np-margin-20">
-
-        </div>
-
-        <div class="np-padding-20 np-color-primary">
-
-            <div class="product-link">
-                <div class="google-play np-display-table np-text-color-primary-light" mdl-ripple>
-
-                    <div class="google-play-inner np-display-table-cell">
-                        <span><img src="assets/img/google-play-white.png"/>
-                    <span class="np-margin-left-12 np-font-comfortaa np-font-12 np-font-bold">Play Store</span></span>
-                    </div>
-                </div>
-            </div>
-
         </div>
 
 
