about page changed

--- a/src/app/theme/sass/_dimen.scss
+++ b/src/app/theme/sass/_dimen.scss
@@ -7,7 +7,13 @@
 .np-padding-16{
   padding: 16px;
 }
+.np-padding-12{
+  padding: 12px;
+}
+.np-padding-8{
+  padding: 8px;
 
+}
 .np-padding-top-16{
   padding-top: 16px;
 }
@@ -19,7 +25,9 @@
 .np-padding-bottom-16{
   padding-bottom: 16px;
 }
-
+.np-padding-bottom-12{
+  padding-bottom: 12px;
+}
 .np-padding-bottom-8{
   padding-bottom: 8px;
 }
@@ -35,12 +43,22 @@
   padding-left: 16px;
 }
 
+
+.np-padding-left-12{
+  padding-left: 12px;
+}
+
 .np-padding-left-8{
   padding-left: 8px;
 }
 
 
-
+.np-margin-top-1{
+  margin-top: 1px;
+}
+.np-margin-top-2{
+  margin-top: 2px;
+}
 
 .np-margin-top-32{
   margin-top: 32px;
