--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,10 +1,8 @@
 <div class="np-color-grey">
-
-    <div class="np-layout-content np-gradient-primary-vertical">
-
-        <div class="about-card np-container-large np-margin-bottom-12">
+    <div class="np-layout-content">
+        <div class="about-card np-shadow-card np-container-large np-margin-bottom-12 np-color-white">
             <div class="about-card-content mdl-grid">
-                <div class="mdl-cell mdl-cell--4-col-phone mdl-cell--2-col-tablet mdl-cell--3-col">
+                <div class="mdl-cell mdl-cell--4-col-phone mdl-cell--2-col-tablet mdl-cell--2-col">
                     <!--div class="about-avatar np-flex-container">
                         <div class="avatar-container np-layout-align-middle">
                             <img src="assets/img/avatar.jpg">
@@ -16,93 +14,66 @@
                         </div>
                     </div>
                 </div>
-                <div class="mdl-cell mdl-cell--4-col-phone mdl-cell--6-col-tablet mdl-cell--9-col about-info">
-                    <div class=" ">
-                        <div class="about-header np-padding-bottom-16">
-                            <h4 class="np-text-color-white np-font-comfortaa np-font-light"><span>Niraj Prakash</span></h4>
-                            <!--h6 class="font-open-sans np-text-shadow "> App &amp; web developer</h6-->
-                            <h6 class="np-text-color-primary-light np-font-open-sans np-font-bold np-font-12"><span class="np-underline-small-primary_all">Android &middot; Website &middot; Server</span></h6>
-                        </div>
-
-                        <div class="about-subheader np-text-color-white">
-                            <p>
-                                <mdl-icon class="np-layout-align-middle np-font-12 np-margin-right-12 np-text-color-white">email</mdl-icon>nirajprakash13@gmail.com</p>
-                            <p>
-                                <mdl-icon class="np-layout-align-middle np-font-12 np-margin-right-12 np-text-color-white">location_on</mdl-icon>Koramangala, Bangalore, India</p>
-                        </div>
-
-                        <div class="about-detail np-padding-top-16">
-                            <p class="np-font-open-sans np-font-12 mdl-color-text--grey-200">I’m Android App and Web Developer specializing in front-end and back-end development. Experienced
-                                with all stages of the development cycle for dynamic web projects.
-                            </p>
-
-                        </div>
-                        <ul class="social">
-                            <li>
-                                <button mdl-button mdl-button-type="icon">
-                        <i class="icon-linkedin socialicon np-text-color-accent"></i>
-                    </button>
-                            </li>
-                            <li>
-                                <button mdl-button mdl-button-type="icon">
-                        <i class="icon-instagram socialicon np-text-color-accent"></i>
-                    </button>
-                            </li>
-
-                            <li>
-                                <button mdl-button mdl-button-type="icon">
-                        <i class="icon-facebook socialicon np-text-color-accent"></i>
-                    </button>
-                            </li>
-                        </ul>
+                <div class="mdl-cell mdl-cell--4-col-phone mdl-cell--6-col-tablet mdl-cell--4-col about-info">
+                    <div class="about-header np-padding-bottom-12">
+                        <h4 class="np-font-comfortaa np-font-18"><span>Niraj Prakash</span></h4>
+                        <!--h6 class="font-open-sans np-text-shadow "> App &amp; web developer</h6-->
+                        <h6 class="np-text-color-primary np-font-open-sans np-font-12"><span class="np-underline-small-primary_all">Android &middot; Website &middot; Server</span></h6>
+                    </div>
+                    <div class="about-detail">
+                        <p class="np-font-open-sans np-font-12 np-border-primary-left np-padding-8 mdl-color--grey-50 mdl-color-text--grey-500">I’m Android App and Web Developer specializing in front-end and back-end development. Experienced
+                            with all stages of the development cycle for dynamic web projects.
+                        </p>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="np-layout-content">
 
-        <div class="np-container-large">
-            <div class="np-border-2 np-hover-card-up info-card np-color-white">
-                <div class="info-items">
-                    <div class="info-work np-flex-container np-margin-bottom-20">
-                        <div class="tag">
-                            <p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Works:</p>
+                <div class="mdl-cell mdl-cell--4-col-phone mdl-cell--2-offset-tablet mdl-cell--6-col-tablet mdl-cell--6-col about-info">
+                    <div class="info-items">
+                        <div class="info-work np-flex-container np-margin-bottom-20">
+                            <div class="tag">
+                                <p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Works:</p>
+                            </div>
+                            <div class="value np-font-open-sans mdl-color-text--grey-500">
+                                <p class="np-padding-bottom-4">Freelancer from 2017</p>
+                                <p>Former Android and web developer at <span class="np-text-color-primary">Fancymonk 2015-2016</span></p>
+                            </div>
                         </div>
-                        <div class="value np-font-open-sans mdl-color-text--grey-500">
-                            <p class="np-padding-bottom-4">Freelancer from 2017</p>
-                            <p>Former Android and web developer at <span class="np-text-color-primary">Fancymonk 2015-2016</span></p>
-                        </div>
-                    </div>
-                    <div class="info-alma-mater np-flex-container np-margin-bottom-12">
+                        <div class="info-alma-mater np-flex-container np-margin-bottom-12">
 
-                        <div class="tag">
-                            <p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Alma Mater:</p>
+                            <div class="tag">
+                                <p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Alma Mater:</p>
+                            </div>
+                            <div class="value np-font-open-sans mdl-color-text--grey-500">
+                                <p class="np-text-color-primary np-padding-bottom-4">IIT Kharagpur (B. Tech.)</p>
+                            </div>
                         </div>
-                        <div class="value np-font-open-sans mdl-color-text--grey-500">
-                            <p class="np-text-color-primary np-padding-bottom-4">IIT Kharagpur (B. Tech.)</p>
-                        </div>
-                    </div>
-                    <!--div class="info-school np-flex-container np-margin-bottom-12">
+                        <!--div class="info-school np-flex-container np-margin-bottom-12">
                         
                         <div class="tag"><p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">School:</p></div>
                         <div class="value np-font-open-sans mdl-color-text--grey-500">
                             <p class="np-padding-bottom-4">Bal Vidya Niketan <span class="np-text-color-primary">class of 2010</span> </p>
                         </div>
                     </div-->
-                    <div class="info-hobby np-flex-container">
-                        <div class="tag">
-                            <p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Hobbies:</p>
-                        </div>
-                        <div class="value np-font-open-sans mdl-color-text--grey-500">
-                            <p>PC Gaming, Sketching</p>
+                        <div class="info-hobby np-flex-container">
+                            <div class="tag">
+                                <p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Hobbies:</p>
+                            </div>
+                            <div class="value np-font-open-sans mdl-color-text--grey-500">
+                                <p>PC Gaming, Sketching</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="np-layout-content">
+
+        <div class="np-container-large">
             <np-project-view></np-project-view>
         </div>
     </div>
+
 
 </div>
