--- a/src/app/ui/about/about.component.scss
+++ b/src/app/ui/about/about.component.scss
@@ -16,8 +16,14 @@
             max-width: 104px;
             height: auto;
             border-radius: 100%;
-            box-shadow: 0px 4px 8px 1px rgba(0,0,0,0.14), 
-            0px 0px 11px 1px rgba(0,0,0,0.12);
+                box-shadow: 0 1px 3px 0px rgba(0,0,0,0.1);
+            transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+
+            &:hover{
+                box-shadow: 0px 4px 8px 1px rgba(0,0,0,0.14);
+                border-radius: 4px;
+                transform: scale(1.1);
+            }
         }
     }
 
@@ -26,11 +32,21 @@
 
         h4,h6{
             margin: 0;
-            line-height: 1.1;
+            line-height: 1.3;
+        }
+    }
+
+     .info-items{
+         height: 100%;
+        .tag{
+            min-width: 88px;
         }
         p{
-            font-size:12px;
+            font-size: 12px;
+            margin: 0;
+            line-height: 1.3;
         }
+
     }
 
     .about-subheader{
@@ -73,32 +89,32 @@
 }
 
 
-.info-card{
-    padding: 20px;
-    .info-items{
-
-        .tag{
-            min-width: 200px;
-        }
-        p{
-            font-size: 12px;
-            margin: 0;
-            line-height: 1.3;
-        }
-
-    }
-}
-
-@media screen and (max-width: 500px) {
-    .info-card{
-        padding: 20px;
-
+@media screen and (max-width: 839px) and (min-width: 480px){
+    .about-card{
         .info-items{
 
-            .tag{
-                min-width: 80px;
-            }
+            border-left: 1px solid #e2e2e2;
+            padding: 0 16px;
+            
             p{
+                font-size: 12px;
+                margin: 0;
+                line-height: 1.3;
+            }
+
+        }
+    }
+}
+@media screen and (min-width: 839px) {
+
+    .about-card{
+        .info-items{
+            
+            border-left: 1px solid #e2e2e2;
+            padding: 0 16px;
+            
+            p{
+                font-size: 12px;
                 margin: 0;
                 line-height: 1.3;
             }
