--- a/src/app/ui/test/test.component.scss
+++ b/src/app/ui/test/test.component.scss
@@ -1,96 +1,130 @@
-.contact{
 
-}
 
-.contact-form{
-    .contact-form-submit{
-        padding:16px;
+.about-card{
+    padding: 0;
+    width: 100%;
+    margin: 0 auto;
+    flex-shrink: 0;
+    
+    .about-card-content{
+        padding: 24px;
     }
+    
+    .avatar-container{
+        img {
+            width:100%;  
+            max-width: 104px;
+            height: auto;
+            border-radius: 100%;
+                box-shadow: 0 1px 3px 0px rgba(0,0,0,0.1);
+            transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 
-    .contact-field{
-        padding: 16px 16px 0 16px;
-    }
-}
-
-.contact-me{
-    padding: 24px;
-    .heading{
-        h4{
-            margin: 0;
-        }
-    }
-    .info{
-        ul{
-            margin: 0;
-        }
-        ul>li{
-            min-height: 48px;
-            mdl-icon{
-                    font-size: 16px;   
-            }
-            button{
-                text-transform: none;
+            &:hover{
+                box-shadow: 0px 4px 8px 1px rgba(0,0,0,0.14);
+                border-radius: 4px;
+                transform: scale(1.1);
             }
         }
     }
 
-    .contact-social{
-        h4{
+    .about-info{
+        color: #3d4451;
+
+        h4,h6{
             margin: 0;
-        }
-
-        .social {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-            text-align: center; 
-
-            li {
-                display: inline-block;
-                margin: 5px auto; 
-
-                button .socialicon{
-                    font-size: 12px;
-                    display: block;
-                }
-            }
+            line-height: 1.3;
         }
     }
-    
-}
 
-@media screen and (min-width: 660px) {
-    
-.contact{
- flex-flow: row nowrap;
- display: flex;
-
-}
-
-.contact-form{
-    
-    min-width: 300px;
-}
-    .contact-me{
-        min-width: 232px;
+     .info-items{
+         height: 100%;
+        .tag{
+            min-width: 88px;
+        }
+        p{
+            font-size: 12px;
+            margin: 0;
+            line-height: 1.3;
+        }
 
     }
-}
-@media screen and (max-width: 660px) {
-    .contact{
-        flex-flow: row wrap;
-        display: flex;
+
+    .about-subheader{
+        margin: 4px 0px 2px 0px;
+        p{
+            line-height: 1.4;
+            margin: 2px 0px 0px 0px;
+        }
     }
-    .contact-me{
+
+    .about-detail{
         
-        padding: 20px;
-        flex-grow: 1;
-        order:0;
+        p{
+            margin: 0;
+            line-height: 1.3;
+        }
     }
 
-    .contact-form{
-        flex-flow: row nowrap;
-        order: 1;
-        width: 100%;
+
+    .social {
+        margin: 2px 0;
+        padding: 0;
+        list-style: none; 
+    }
+    
+    .social li {
+        display: inline-block;
+        margin-left: 0px;
+        margin-right: 2px; 
+    }
+    .social li button{
+        width: 32px;
+        height: 32px;        
+    }
+    .social li button .socialicon{
+        font-size: 14px;
+        display: block;
+    }
+
+}
+
+
+@media screen and (max-width: 839px) and (min-width: 480px){
+    .about-card{
+        .info-items{
+
+            border-left: 1px solid #e2e2e2;
+            padding: 0 16px;
+            
+            p{
+                font-size: 12px;
+                margin: 0;
+                line-height: 1.3;
+            }
+
+        }
     }
 }
+@media screen and (min-width: 839px) {
+
+    .about-card{
+        .info-items{
+            
+            border-left: 1px solid #e2e2e2;
+            padding: 0 16px;
+            
+            p{
+                font-size: 12px;
+                margin: 0;
+                line-height: 1.3;
+            }
+
+        }
+    }
+
+}
+
+
+
+
+
