--- a/src/app/ui/about/project.component.scss
+++ b/src/app/ui/about/project.component.scss
@@ -1,7 +1,10 @@
 .project{
     .title{
-        padding: 28px 0 28px 0;
+        padding: 0px 0 48px 0;
         text-align: center;
+        h6{
+            margin: 0px;
+        }
     }
 
     .card-project{
