--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -6,7 +6,7 @@
 
 
 
-<footer class="mdl-color--white footer">
+<footer class="mdl-color--blue-grey-800 footer">
     <div class="footer-content np-flex-container ">
         <div class="footer-left-section">
             <ul class="footer-link-list font-comfortaa">
@@ -21,22 +21,22 @@
             <ul class="social">
                 <li>
                     <button mdl-button mdl-button-type="icon">
-                        <i class="icon-github-circled socialicon np-text-color-gethub"></i>
+                        <i class="icon-github-circled socialicon np-text-color-white"></i>
                     </button>
                 </li>
                 <li>
                     <button mdl-button mdl-button-type="icon">
-                        <i class="icon-bitbucket socialicon np-text-color-bitbucket"></i>
+                        <i class="icon-bitbucket socialicon np-text-color-white"></i>
                     </button>
                 </li>
                 <li>
                     <button mdl-button mdl-button-type="icon">
-                        <i class="icon-linkedin socialicon np-text-color-linkedin"></i>
+                        <i class="icon-linkedin socialicon np-text-color-white"></i>
                     </button>
                 </li>
                 <li>
                     <button mdl-button mdl-button-type="icon">
-                        <i class="icon-instagram socialicon np-text-color-instagram"></i>
+                        <i class="icon-instagram socialicon np-text-color-white"></i>
                     </button>
                 </li>
             </ul>
