--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="np-color-grey">
+<div class="np-color-white">
 
     <div class="top-wall">
         <div class="np-layout-content wall-frame">
@@ -22,7 +22,7 @@
 
     </div>
 
-    <div class="service np-color-grey">
+    <div class="service">
         <div class="title">
             <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">Services</span></h6>
         </div>
