--- a/src/app/ui/home/technology.component.html
+++ b/src/app/ui/home/technology.component.html
@@ -1,4 +1,4 @@
-<div class="technology np-color-grey">
+<div class="technology">
   <div class="title">
     <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">Technologies</span></h6>
   </div>
