--- a/src/app/ui/portfolio/portfolio.component.html
+++ b/src/app/ui/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div class="np-layout-content">
+<div class="np-layout-content  mdl-color--grey-50">
     <div class="portfolio">
         <div class="title np-text-align-center">
             <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">portfolio</span></h6>
