--- a/src/app/ui/portfolio/portfolio.component.scss
+++ b/src/app/ui/portfolio/portfolio.component.scss
@@ -1,7 +1,10 @@
 .portfolio{
 
     .title{
-        padding: 28px 0 28px 0;
+        padding: 0px 0 48px 0;
+        .h6{
+          margin: 0px;
+        }
     }
 
 }
