--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,27 +1,33 @@
 <div class="np-color-white">
 
+
     <div class="top-wall">
-        <div class="np-layout-content wall-frame">
-            <div class="np-flex-layout np-flex-align-items">
-                <div class="profile">
-                    <h4 class="np-font-open-sans np-text-color-white np-text-align-center np-font-light">Android and Wed Innovation</h4>
-                </div>
-
-                <div class="np-margin-top-32">
-
-                    <div class="profile-action np-font-open-sans">
-                        <button mdl-button mdl-button-type="raised" mdl-colored="primary" class="np-color-primary-alpha-6" mdl-ripple><span class="np-font-open-sans np-font-12">Download CV</span></button>
-
-                        <!--button mdl-button mdl-colored="primary" mdl-ripple><span class="np-font-open-sans np-font-12 np-font-bold">Download CV</span></button-->
+        <div class="np-container-large">
+            <div class="np-flex-wrapper wall-frame">
+                <div class="wall-tag np-flex-wrapper np-flex-column">
+                    <mdl-layout-spacer></mdl-layout-spacer>
+                    <div class="wall-tag-inner">
+                        <span class="wall-text"><h4 class="np-font-comfortaa">Draw, Design, Develop</h4></span>
                     </div>
-
                 </div>
+
+                <div class="wall-info">
+                    <div class="wall-info-inner np-flex-wrapper np-flex-column np-text-color-white">
+                        <span class="wall-text np-margin-bottom-12"><h6>Expertise In</h6></span>
+                        <span class="wall-text np-margin-bottom-8"><p>Android</p></span>
+                        <span class="wall-text np-margin-bottom-8"><p>Web</p></span>
+                        <span class="wall-text np-margin-bottom-8"><p>clouds</p></span>
+                        <mdl-layout-spacer></mdl-layout-spacer>
+                        <span class="wall-text">
+                        <button class="btn-dawnload-portfolio np-text-color-white" mdl-button mdl-ripple>download Portfolio</button>
+                    </span>
+                    </div>
+                </div>
+
             </div>
 
         </div>
-
     </div>
-
     <div class="service">
         <div class="title">
             <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">Services</span></h6>
