--- a/src/app/ui/test/test.component.scss
+++ b/src/app/ui/test/test.component.scss
@@ -1,130 +1,121 @@
 
+.top-wall{
 
-.about-card{
-    padding: 0;
-    width: 100%;
-    margin: 0 auto;
-    flex-shrink: 0;
-    
-    .about-card-content{
-        padding: 24px;
+    padding-top: 64px;
+
+
+    h4,h6,p{
+         margin: 0px;
+          line-height: 1.3;
     }
-    
-    .avatar-container{
-        img {
-            width:100%;  
-            max-width: 104px;
-            height: auto;
-            border-radius: 100%;
-                box-shadow: 0 1px 3px 0px rgba(0,0,0,0.1);
-            transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    h4{
+          font-size: 20px;
+      }   
+      h6{
+          font-size: 16px;
+      } 
 
-            &:hover{
-                box-shadow: 0px 4px 8px 1px rgba(0,0,0,0.14);
-                border-radius: 4px;
-                transform: scale(1.1);
-            }
-        }
+    .wall-frame{
+                flex-direction: column;
     }
-
-    .about-info{
-        color: #3d4451;
-
-        h4,h6{
-            margin: 0;
-            line-height: 1.3;
-        }
-    }
-
-     .info-items{
-         height: 100%;
-        .tag{
-            min-width: 88px;
-        }
-        p{
-            font-size: 12px;
-            margin: 0;
-            line-height: 1.3;
-        }
-
-    }
-
-    .about-subheader{
-        margin: 4px 0px 2px 0px;
-        p{
-            line-height: 1.4;
-            margin: 2px 0px 0px 0px;
-        }
-    }
-
-    .about-detail{
-        
-        p{
-            margin: 0;
-            line-height: 1.3;
-        }
-    }
-
-
-    .social {
-        margin: 2px 0;
-        padding: 0;
-        list-style: none; 
-    }
-    
-    .social li {
-        display: inline-block;
-        margin-left: 0px;
-        margin-right: 2px; 
-    }
-    .social li button{
-        width: 32px;
-        height: 32px;        
-    }
-    .social li button .socialicon{
-        font-size: 14px;
-        display: block;
-    }
-
-}
-
-
-@media screen and (max-width: 839px) and (min-width: 480px){
-    .about-card{
-        .info-items{
-
-            border-left: 1px solid #e2e2e2;
-            padding: 0 16px;
-            
-            p{
-                font-size: 12px;
-                margin: 0;
-                line-height: 1.3;
-            }
-
-        }
+    .wall-text{
+            display: block;
     }
 }
-@media screen and (min-width: 839px) {
 
-    .about-card{
-        .info-items{
-            
-            border-left: 1px solid #e2e2e2;
-            padding: 0 16px;
-            
-            p{
-                font-size: 12px;
-                margin: 0;
-                line-height: 1.3;
+
+
+
+@media screen and (min-width:660px){
+    .top-wall{
+        padding-bottom: 64px;
+        background-image: linear-gradient(to right, transparent 20%, rgba(28, 190, 131, 1) 20%, rgba(28, 190, 131, 1) 60%,  transparent 60%);
+        background-position: 100% 100%;
+        background-size: 250% 100%;
+        transition: background-position 1.4s ease .1s;
+
+
+        &:hover{
+            background-position: 0% 100%;
+            .wall-text{
+                animation-name: fadeInUpY;
+                animation-delay: 1.4s;
+                animation-duration: 0.5s;
+                animation-fill-mode: both;
             }
+        }
 
+        .wall-frame{
+            flex-direction: row;
+            .wall-tag-inner{
+                padding: 20px;
+            }
+        }
+
+        .wall-text{
+            opacity: 0;
+                
+        }
+
+        .wall-tag{
+            flex-basis: 50%;
+        }
+        .wall-info{
+            flex-basis: 50%;
         }
     }
 
 }
 
+@media screen and (max-width:660px){
+     .top-wall{
+          background-image: linear-gradient(to right, rgba(28, 190, 131, 1) 50%, rgba(28, 190, 131, 1) 50%);
+        background-position: 100% 100%;
+        background-size: 100% 100%;
+        transition: background-position 1.4s ease .1s;
+        color: white;
+
+        .wall-tag{
+            .wall-tag-inner{
+                padding: 16px 16px 0px 16px;
+            }
+            
+           
+        }
+
+        h6{
+            font-size: 14px;
+
+        }
+        h4{
+            font-size: 18px;
+        }
+
+        .wall-text{
+            animation-name: fadeInUpY;
+            animation-delay: 1.4s;
+            animation-duration: 0.5s;
+            animation-fill-mode: both;
+        }
+    }
+}
 
 
+@keyframes fadeInUpY{
+    0%{
+        opacity: 0;
+        transform: translateY(50%);
+
+    }
+    100%{
+        opacity: 1;
+        transform: none;
+    }
+
+}
 
 
+.btn-dawnload-portfolio{
+    border: 1px solid white;
+
+}
